--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,9 +7,10 @@ html {
 }
 
 body {
-   font-family: var(--font-inter);
+   font-family: var(--font-blinker);
+   letter-spacing: 0.5px;
 }
 
 button {
-   font-family: var(--font-inter);
+   font-family: var(--font-blinker);
 }
