--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,3 +14,8 @@ body {
 button {
    font-family: var(--font-blinker);
 }
+
+[type="checkbox"]:checked {
+   background-image: url("/checked-icon.svg");
+   background-size: 12px;
+}
